tests/neg/7092.check
-- Error: tests/neg/7092.scala:13:11 -----------------------------------------------------------------------------------
13 |  f[String] // error
   |           ^
   |           Not found for String
-- Error: tests/neg/7092.scala:14:11 -----------------------------------------------------------------------------------
14 |  g[String] // error
   |           ^
   |           Not found for String
